<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/website_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edittext_uri"
        tools:layout_conversion_absoluteHeight="50dp"
        tools:layout_conversion_absoluteWidth="238dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/open_website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openWebsite"
        android:text="@string/button_uri"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="123dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="66dp" />

    <EditText
        android:id="@+id/location_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edittext_uri"
        tools:layout_conversion_absoluteHeight="50dp"
        tools:layout_conversion_absoluteWidth="385dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="138dp" />

    <Button
        android:id="@+id/open_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openLocation"
        android:text="@string/button_loc"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="133dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="189dp" />

    <EditText
        android:id="@+id/share_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edittext_share"
        tools:layout_conversion_absoluteHeight="50dp"
        tools:layout_conversion_absoluteWidth="385dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="261dp" />

    <Button
        android:id="@+id/share_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="shareText"
        android:text="@string/button_share"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="141dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="311dp" />

    <TextView
        android:id="@+id/text_header_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_header_reply"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="24dp"
        tools:layout_conversion_absoluteWidth="125dp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="399dp" />

    <TextView
        android:id="@+id/text_message_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_header_reply"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="0dp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="431dp" />

    <EditText
        android:id="@+id/editText_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_main"
        android:inputType="textLongMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_main"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="50dp"
        tools:layout_conversion_absoluteWidth="138dp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="450dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@+id/text_uri_message"
        tools:context=".MainActivity"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="0dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="516dp" />

    <Button
        android:id="@+id/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchSecondActivity"
        android:text="@string/button_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="101dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="535dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="188dp"
        android:visibility="visible">

        <Button
            android:id="@+id/text_one"
            android:layout_width="113dp"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="76dp"
            android:text="@string/text_one_button"
            android:onClick="launchSecondActivityTextOne"
            tools:layout_conversion_absoluteHeight="23dp"
            tools:layout_conversion_absoluteWidth="88dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="695dp" />

        <Button
            android:id="@+id/text_two"
            android:layout_width="107dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="73dp"
            android:layout_toStartOf="@+id/text_three"
            android:layout_toEndOf="@+id/text_one"
            android:text="@string/text_two_button"
            android:onClick="launchSecondActivityTextTwo"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="88dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="647dp" />

        <Button
            android:id="@+id/text_three"
            android:layout_width="126dp"
            android:layout_height="46dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="73dp"
            android:text="@string/text_three_button"
            android:onClick="launchSecondActivityTextThree"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="88dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="599dp" />
    </RelativeLayout>

</LinearLayout>